# gpR

./: .Rbuildignore  .gitignore  .lintr  .travis.yml  DESCRIPTION  NAMESPACE  README.md  Readme.md  VERSIONS.md  cleanup  config.status  configure  configure.ac  gpR.Rproj
R/: approx.R  classes.R  demo.R  fort.R  gpR_package.R  gpc.R  gpr.R  kernels.R  lvgpp-package.R  lvgpp.R  package.R  predict.R  predict_binomial.R  predict_gaussian.R  sampler.R  train.R  transfer_functions.R  zzz.R
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
inst/doc/: gpR.R  gpR.Rmd  gpR.html  lvgpp.R  lvgpp.Rmd  lvgpp.html
lvgpp/: DESCRIPTION
lvgpp/R/: classes.R  demo.R  kernels.R  lvgpp.R  predict.R  sampler.R  transfer_functions.R
lvgpp/man/: covariance.function.Rd  demo.regression.Rd  lvgpc.Rd  sample.from.gp.Rd
man/: covariance.function.Rd  demo.bin.classification.Rd  demo.regression.Rd  gpR-package.Rd  lvgpc.Rd  lvgpc.data-class.Rd  lvgpp-package.Rd  lvgpr.Rd  lvgpr.data-class.Rd  sample.from.sigmoid.gp.Rd
src/: .gitignore  .laplace_approximation.f90.swp  .predict_binomial.f90.swp  Makevars  Makevars.in  Makevars.win  gpr_approx.f90  gpr_approx.mod  gpr_linalg.f90  gpr_linalg.mod  gpr_sample.f90  gpr_sampler.mod  gpr_util.f90  laplace_approximation.f90  predict_binomial.f90  predict_binomiall.bla  predict_lvgpr.f90  predict_lvgpr.f95
tests/: testthat.R
tests/testthat/: test_classification.R  test_laplace.R  test_lint.R  test_prediction_binom.R  test_regression.R
vignettes/: gpR.R  lvgpp.Rmd
